[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "crcmod>=1.7",
    "discord-py>=2.5.2",
    "python-dotenv>=1.0.1",
    "qrcode>=8.0",
    "requests>=2.32.3",
]
